# aoc

./: .gitignore  .gitmodules  Cargo.toml  README.adoc  README.md
2015/: README.md
2015-haskell/: Aoc.hs  README.md  run.sh
2015-haskell/input/: 06  07  16  17
2015-haskell/rust/: 01.rs  04.rs  07.rs  13.rs  17.rs  19.rs  21.rs
2015-haskell/src/: 01.hs  02.hs  03.hs
2015/c/: 01.c  02.c  03.c  04.c  05.c  run.sh
2015/cpp/: 01.cpp  02.cpp  03.cpp  04.sh  run.sh
2015/d02-i_was_told_there_would_be_no_math/: Cargo.toml
2015/d03-perfectly_spherical_house_in_a_vacuum/: Cargo.toml
2015/d04-the_ideal_stocking_stuffer/: Cargo.toml
2015/go/: 01.go  02.go  03.go  04.go  05.go  06.go  07.go
2015/haskell/: 01.hs  02.hs  03.hs  AOC.hs  run.sh
2015/input/: 02  16
2015/julia/: 01.jl  02.jl  03.jl  04.jl  05.jl  06.jl  07.jl  08.jl  09.jl  10.jl  11.jl
2015/python/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py
2015/rust/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  (+19 more)
2016/: README.md
2016-clojure/: README.md
2016-go/: go.mod  main.go
2017/: README.md
2017-rainbow/: README.md
2018/: README.md
2019/: README.md
2020/: README.md
2021/: README.md
2022/: README.md
2025/: .gitignore  d01.c  d02.c  d03.c  d04.c  d05.c  d06.c  d07.c  d08.c  d09.c  d10.c
advent/: Cargo.toml
advent_lib/: Cargo.toml
advent_macros/: Cargo.toml
advent_rainbow/: README.adoc
aoc/: Cargo.toml  template.txt
docs/: README.adoc
ren_rs/: Cargo.toml  build.rs
(+586 files in other folders)
