[workspace]
resolver = "2"
members = [
	"advent",
	"advent_macros",
	"advent_lib",
]

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
advent = { path = "./advent", version = "0.0.1" }
advent_lib = { path = "./advent_lib", version = "0.0.1" }
advent_macros = { path = "./advent_macros", version = "0.0.1" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
